[project]
name = "comax"
version = "0.1.0"
description = "Save and restore tmux + Copilot CLI sessions"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
]

[project.scripts]
comax = "comax.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comax"]
